AN resolved Cart Distortion

--- a/WebApp/sampurnaWebsite/Themes/Sampurna/blocks/10_eCommerceBlocks/ProductCarousel/ProductCarousel.module.css
+++ b/WebApp/sampurnaWebsite/Themes/Sampurna/blocks/10_eCommerceBlocks/ProductCarousel/ProductCarousel.module.css
@@ -7,6 +7,14 @@
   font-family: 'Montserrat-Regular';
   src        : url('../../../fonts/Montserrat-Regular.ttf');
 }
+.alertMessage{
+    position: fixed;
+    z-index: 1000;
+    top: 25px !important;
+    right: 42px !important;
+    display: block;
+}
+
 .categoryBlockWrapper{
     margin-top: 35px;
 }
