--- a/WebApp/sampurnaWebsite/Themes/Sampurna/blocks/StaticBlocks/CartProducts/CartProducts.module.css
+++ b/WebApp/sampurnaWebsite/Themes/Sampurna/blocks/StaticBlocks/CartProducts/CartProducts.module.css
@@ -92,8 +92,7 @@
     text-align: left;
     width: 40%;
     float: left;
-    margin-left: -190%;
-
+    /*margin-left: -190%;*/
 }
 .summeryCurrency{
     text-align: left;
@@ -987,7 +986,7 @@
         font-size: 18px;
     }
     .currency{
-        margin-left: -70%;
+        /*margin-left: -70%;*/
     }
     .amount{
         margin-left: 30%;
@@ -1061,7 +1060,7 @@
         font-size: 18px;
     }
     .currency{
-        margin-left: -80%;
+        /*margin-left: -80%;*/
     }
     .amount{
         margin-left: 20%;
@@ -1133,7 +1132,7 @@
         font-size: 18px;
     }
     .currency{
-        margin-left: -95%;
+        /*margin-left: -95%;*/
     }
     .amount{
         margin-left: 15%;
@@ -1211,7 +1210,7 @@
         font-size: 19px;
     }
     .currency{
-        margin-left: -110%;
+        /*margin-left: -110%;*/
     }
     .amount{
         margin-left: 0%;
