--- a/WebApp/sampurnaWebsite/pages/product-detail/[vendor_id]/[vendorlocation_id]/[categoryurl]/[subcategoryurl]/product_detail.module.css
+++ b/WebApp/sampurnaWebsite/pages/product-detail/[vendor_id]/[vendorlocation_id]/[categoryurl]/[subcategoryurl]/product_detail.module.css
@@ -286,7 +286,7 @@
 	font-size    : 30px;
 	color        : #000;
 	margin-bottom: 5px;
-	font-family: 'Montserrat-Regular';
+	/*font-family: 'Montserrat-Regular';*/
 	margin-right: 5px;
 }
 .productCode{
